--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,18 +66,17 @@ label {
 }
 
 /* actions */
+/* update, create forms */
 .forms {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
 }
 
 .game_form {
-    display: flex;
-    flex-direction: column;
-}
-
-.game_form > * {
-    text-align: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
 }
 
 .field label {
@@ -87,13 +86,18 @@ label {
 .field {
     display: flex;
     align-items: center;
-    height: 30px;
 }
 
 .date_form {
     display: flex;
 }
 
+.kinds_checkboxxes { 
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 5px;
+}
 /* table_display */
 .display {
     display: grid;
@@ -122,7 +126,7 @@ label {
 
 .table_full tr {
     display: grid;
-    grid-template-columns: 1fr 1fr 8fr 2fr;
+    grid-template-columns: 1fr 1fr 8fr 5fr;
 }
 
 .table_full td,
@@ -216,5 +220,21 @@ footer > div {
 
     .table_full tr {
         grid-template-columns: 1fr 1fr 5fr 3fr 2fr 2fr 2fr 2fr 2fr 2fr;
+    }
+    
+    .forms {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 935px) {
+    .forms {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media screen and (min-width: 1300px) {
+    .kinds_checkboxxes {
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
