--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,93 @@
     box-sizing: border-box;
 }
 
+.hide {
+    display: none!important;
+}
+
+.undisplay {
+    opacity: 0 !important;
+}
+
+/*spinner*/
+
+.spinner-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0,0,0,0.2);
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.lds-ellipsis {
+    display: inline-block;
+    position: relative;
+    width: 64px;
+    height: 64px;
+}
+
+.lds-ellipsis div {
+    position: absolute;
+    top: 27px;
+    width: 11px;
+    height: 11px;
+    border-radius: 50%;
+    background: #000;
+    animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+
+.lds-ellipsis div:nth-child(1) {
+    left: 6px;
+    animation: lds-ellipsis1 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(2) {
+    left: 6px;
+    animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(3) {
+    left: 26px;
+    animation: lds-ellipsis2 0.6s infinite;
+}
+
+.lds-ellipsis div:nth-child(4) {
+    left: 45px;
+    animation: lds-ellipsis3 0.6s infinite;
+}
+
+@keyframes lds-ellipsis1 {
+    0% {
+		transform: scale(0);
+    }
+    100% {
+		transform: scale(1);
+    }
+}
+
+@keyframes lds-ellipsis3 {
+    0% {
+		transform: scale(1);
+    }
+    100% {
+		transform: scale(0);
+    }
+}
+
+@keyframes lds-ellipsis2 {
+    0% {
+		transform: translate(0, 0);
+    }
+    100% {
+		transform: translate(19px, 0);
+    }
+}
+
+/*/spinner*/
 [data-template] {
     display: none!important;
 }
@@ -105,6 +192,7 @@ label {
     grid-gap: 5px;
 }
 
+/* delete */
 .modal_global {
     position: fixed;
     left: 0;
@@ -154,38 +242,8 @@ label {
     justify-content: flex-end;
 }
 
-
-/* delete */
-.overlay {
-    position: fixed;
-    top: 0;
-    left:0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.65);
-}
-
-.pop_up {
-    position: fixed;
-    top: 30%;
-    left: 30%;
-    background: white;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
-    width: 40%;
-    height: 30%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .pop_up_text {
-    position: absolute;
-    top: 30%;
-    left: 0;
+    margin: 100px auto 0 auto;
     font-size: 20px;
     text-align: center;
 }
@@ -201,6 +259,7 @@ label {
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+    cursor: pointer;
 }
 
 .cancel_button {
